--- a/index.html
+++ b/index.html
@@ -6,131 +6,95 @@
 <title>Generador de cumplidos — Nicool 💖</title>
 <style>
 :root {
-  --bg1: #ffd6e9;
-  --bg2: #fff0f6;
-  --accent: #ff4da6;
-  --text-color: #333;
+  --bg1: #1f1c2c;
+  --bg2: #928dab;
+  --accent1: #ff4da6;
+  --accent2: #ff85c1;
+  --text-color: #fff;
 }
 
 /* Reset */
-*{box-sizing:border-box;margin:0;padding:0}
+* { box-sizing: border-box; margin:0; padding:0 }
 
-body{
+body {
   min-height:100vh;
   display:flex;
-  align-items:center;
   justify-content:center;
-  font-family: "Poppins", system-ui, sans-serif;
-  background: linear-gradient(135deg,var(--bg1),var(--bg2));
+  align-items:center;
+  font-family:"Poppins", system-ui, sans-serif;
+  background: linear-gradient(180deg, var(--bg1), var(--bg2));
   overflow:hidden;
+  padding:20px;
 }
 
-.card{
-  width:clamp(300px,86vw,720px);
-  background: rgba(255,255,255,0.65);
-  border-radius:18px;
-  padding:28px;
+/* Tarjeta principal */
+.card {
+  width: clamp(320px,85vw,720px);
+  background: rgba(255,255,255,0.15);
+  border-radius: 24px;
+  padding: 32px 28px;
   text-align:center;
-  box-shadow: 0 10px 30px rgba(0,0,0,0.08);
-  backdrop-filter: blur(6px);
-  position:relative;
+  backdrop-filter: blur(12px);
+  box-shadow: 0 20px 50px rgba(0,0,0,0.4);
+  color: var(--text-color);
+  position: relative;
 }
 
-h1{
-  color:var(--accent);
-  font-size:clamp(1.4rem,3.6vw,2rem);
-  margin-bottom:8px;
+/* Títulos */
+h1 {
+  font-size: clamp(1.8rem,4vw,2.4rem);
+  margin-bottom:10px;
+  text-shadow: 0 0 10px var(--accent1), 0 0 20px var(--accent2);
 }
-
-.subtitle{
-  color:var(--accent);
+.subtitle {
   font-family:'Brush Script MT','Segoe Script',cursive;
-  font-size:clamp(1.1rem,2.8vw,1.6rem);
-  text-shadow: 0 0 6px #ffb3d9, 0 0 12px #fff;
-  margin-bottom:18px;
+  font-size: clamp(1.2rem,3vw,1.6rem);
+  text-shadow: 0 0 8px var(--accent2);
+  margin-bottom: 24px;
 }
 
-.btn{
+/* Botón */
+.btn {
   display:inline-block;
-  background: linear-gradient(90deg,var(--accent),#ff85c1);
+  background: linear-gradient(90deg,var(--accent1),var(--accent2));
   color:white;
   border:none;
-  padding:12px 22px;
-  border-radius:12px;
+  padding:14px 26px;
+  border-radius:16px;
   font-size:1rem;
   cursor:pointer;
-  transition: transform .15s ease, box-shadow .15s ease;
-  box-shadow: 0 6px 18px rgba(255,77,166,0.24);
+  transition: transform .2s ease, box-shadow .2s ease;
+  box-shadow: 0 8px 30px rgba(255,77,166,0.6);
+  margin-top:10px;
 }
-.btn:active{ transform: translateY(2px) }
-.btn:hover{ box-shadow: 0 10px 30px rgba(255,77,166,0.28) }
+.btn:hover { transform: scale(1.08); box-shadow: 0 12px 40px rgba(255,77,166,0.8); }
+.btn:active { transform: scale(0.97); }
 
-#cumplido{
-  margin-top:22px;
-  min-height:56px;
+/* Cuadro de cumplido */
+#cumplido {
+  margin-top:24px;
+  min-height:60px;
   display:flex;
   align-items:center;
   justify-content:center;
-  font-size:clamp(1rem,2.5vw,1.2rem);
-  color:var(--text-color);
-  padding:10px 16px;
-  border-radius:12px;
-  background: rgba(255,255,255,0.75);
-  box-shadow: inset 0 1px 0 rgba(255,255,255,0.6);
+  font-size: clamp(1rem,2.5vw,1.3rem);
+  color:#fff;
+  padding:16px 20px;
+  border-radius:14px;
+  background: rgba(0,0,0,0.3);
+  text-shadow: 0 0 6px #ff85c1, 0 0 12px #ff4da6;
   opacity:0;
   transform: translateY(10px);
   transition: transform 0.5s ease, opacity 0.5s ease;
 }
-.show {
-  transform: translateY(0);
-  opacity: 1;
-}
-
-/* Corazones flotantes */
-.heart{
-  position:absolute;
-  width:18px;height:18px;
-  transform: rotate(-45deg);
-  opacity:0.9;
-  pointer-events:none;
-}
-.heart::before, .heart::after{
-  content:"";
-  position:absolute;
-  width:18px;height:18px;
-  background:var(--accent);
-  border-radius:50%;
-}
-.heart::after{ left:9px }
-
-.h1{ left:8%; top:12%; animation: float1 6s linear infinite; opacity:.7 }
-.h2{ left:85%; top:20%; animation: float2 7s linear infinite; transform:scale(.9) }
-.h3{ left:20%; top:78%; animation: float3 5.5s linear infinite; transform:scale(.8) }
-.h4{ left:68%; top:82%; animation: float1 6.5s linear infinite; transform:scale(.75); opacity:.8 }
-
-@keyframes float1{ 0%{ transform:translateY(0) } 50%{ transform:translateY(-18px) } 100%{ transform:translateY(0) } }
-@keyframes float2{ 0%{ transform:translateY(0) } 50%{ transform:translateY(-26px) } 100%{ transform:translateY(0) } }
-@keyframes float3{ 0%{ transform:translateY(0) } 50%{ transform:translateY(-12px) } 100%{ transform:translateY(0) } }
-
-/* Frases que caen */
-.falling-text{
-  position:absolute;
-  font-weight:600;
-  opacity:0.8;
-  pointer-events:none;
-  white-space:nowrap;
-  animation-name: fallText;
-  animation-timing-function: linear;
-}
-@keyframes fallText{
-  0%{ transform:translateY(-30px); opacity:0 }
-  10%{ opacity:1 }
-  100%{ transform:translateY(110vh); opacity:0 }
-}
+.show { transform: translateY(0); opacity:1; }
 
 @media (max-width:420px){
-  .card{ padding:20px;border-radius:14px }
-  #cumplido{ font-size:1rem; min-height:64px }
+  .card { padding: 22px; border-radius: 20px; }
+  #cumplido { font-size:1rem; min-height:64px; }
+  h1 { font-size:1.6rem; }
+  .subtitle { font-size:1.2rem; }
+  .btn { padding:12px 20px; font-size:0.95rem; }
 }
 </style>
 </head>
@@ -142,11 +106,6 @@ h1{
 
   <button class="btn" id="btn">Dame un cumplido 🌸</button>
   <div id="cumplido"></div>
-
-  <div class="heart h1"></div>
-  <div class="heart h2"></div>
-  <div class="heart h3"></div>
-  <div class="heart h4"></div>
 </div>
 
 <script>
@@ -205,8 +164,6 @@ const cumplidos = [
   "Eres un motivo para sonreír todos los días 😊"
 ];
 
-const cuteTexts = ["💖 Yay!", "✨ Wow!", "🌸 Cute!", "💫 Hi!", "😍 Yes!", "🌷 Fun!", "🎶 Yay!", "💛 Wow!"];
-
 const btn = document.getElementById('btn');
 const out = document.getElementById('cumplido');
 
@@ -214,24 +171,10 @@ btn.addEventListener('click', () => {
   const i = Math.floor(Math.random() * cumplidos.length);
   out.textContent = cumplidos[i];
   out.classList.remove('show');
-  void out.offsetWidth;
+  void out.offsetWidth; // reinicia animación
   out.classList.add('show');
 });
-
-// Frases flotantes
-function createFallingText() {
-  const span = document.createElement('span');
-  span.className = 'falling-text';
-  span.style.left = Math.random() * 100 + 'vw';
-  span.style.fontSize = (14 + Math.random()*12) + 'px';
-  span.style.color = `hsl(${Math.random()*360},80%,70%)`;
-  span.style.animationDuration = (5 + Math.random()*4) + 's';
-  span.style.top = "-30px";
-  span.textContent = cuteTexts[Math.floor(Math.random()*cuteTexts.length)];
-  document.body.appendChild(span);
-  setTimeout(()=>{ span.remove() }, 9000);
-}
-setInterval(createFallingText, 500);
 </script>
+
 </body>
 </html>
