--- a/index.html
+++ b/index.html
@@ -1,119 +1,149 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>✨ Generador de cumplidos mágicos — Nicool 💖</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>✨ Cumplidos Mágicos — Nicool 💖</title>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 <style>
-  :root{
-    --accent1: #ff4da6;
-    --accent2: #ff85c1;
-    --bg1: #ffd6e9;
-    --bg2: #fff0f6;
-    --text: #333;
-  }
+:root{
+  --accent1:#ff4da6;
+  --accent2:#ff85c1;
+  --bg1:#ffd6e9;
+  --bg2:#fff0f6;
+  --text:#333;
+}
 
-  *{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins', sans-serif;}
+/* Reset básico */
+*{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif;}
 
-  body{
-    min-height:100vh;
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    background: linear-gradient(135deg, var(--bg1), var(--bg2));
-    overflow:hidden;
-    position:relative;
-  }
+body{
+  min-height:100vh;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  background: linear-gradient(135deg, var(--bg1), var(--bg2));
+  overflow:hidden;
+  position:relative;
+}
 
-  .card{
-    width:clamp(320px,80vw,720px);
-    background: rgba(255,255,255,0.6);
-    border-radius:20px;
-    padding:32px;
-    text-align:center;
-    box-shadow: 0 10px 30px rgba(0,0,0,0.1);
-    backdrop-filter: blur(8px);
-    position:relative;
-    animation: pulse 4s infinite alternate;
-  }
+/* Card principal */
+.card{
+  width:clamp(320px,80vw,760px);
+  background: rgba(255,255,255,0.65);
+  border-radius:25px;
+  padding:36px;
+  text-align:center;
+  box-shadow: 0 12px 40px rgba(0,0,0,0.15);
+  backdrop-filter: blur(8px);
+  position:relative;
+  animation: cardPulse 6s infinite alternate;
+}
+@keyframes cardPulse{
+  0%{ transform: scale(1);}
+  50%{ transform: scale(1.03);}
+  100%{ transform: scale(1);}
+}
 
-  @keyframes pulse{
-    0%{ transform: scale(1);}
-    50%{ transform: scale(1.02);}
-    100%{ transform: scale(1);}
-  }
+/* Título y subtítulo */
+h1{
+  font-size:clamp(1.8rem,4vw,2.8rem);
+  color: var(--accent1);
+  margin-bottom:14px;
+  text-shadow: 0 0 10px #fff, 0 0 20px #ffb3d9, 0 0 30px #ff85c1;
+  animation: glowText 3s infinite alternate;
+}
+@keyframes glowText{
+  0%{ text-shadow:0 0 8px #fff,0 0 16px #ffb3d9,0 0 28px #ff85c1;}
+  100%{ text-shadow:0 0 16px #fff,0 0 28px #ffb3d9,0 0 40px #ff4da6;}
+}
+.subtitle{
+  font-family:'Brush Script MT', cursive;
+  font-size:clamp(1.2rem,3vw,2rem);
+  color:#ff4da6;
+  text-shadow:0 0 8px #fff,0 0 16px #ffb3d9;
+  margin-bottom:24px;
+}
 
-  h1{
-    font-size:clamp(1.6rem,4vw,2.4rem);
-    color: var(--accent1);
-    margin-bottom:12px;
-    text-shadow: 0 0 10px #fff, 0 0 20px #ffb3d9;
-    animation: glow 2s infinite alternate;
-  }
+/* Botón mágico */
+.btn{
+  background: linear-gradient(90deg,var(--accent1),var(--accent2));
+  color:white;
+  border:none;
+  padding:16px 28px;
+  border-radius:18px;
+  font-size:1.2rem;
+  cursor:pointer;
+  box-shadow:0 10px 30px rgba(255,77,166,0.4);
+  transition: transform .15s ease, box-shadow .15s ease;
+}
+.btn:hover{ transform: scale(1.08); box-shadow:0 14px 36px rgba(255,77,166,0.6);}
+.btn:active{ transform: scale(0.97); }
 
-  @keyframes glow{
-    0%{ text-shadow: 0 0 6px #fff, 0 0 12px #ffb3d9;}
-    100%{ text-shadow: 0 0 12px #fff, 0 0 24px #ff85c1;}
-  }
+/* Div de cumplido */
+#cumplido{
+  margin-top:28px;
+  min-height:70px;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  font-size:clamp(1.2rem,3vw,1.6rem);
+  color:var(--text);
+  padding:14px 24px;
+  border-radius:16px;
+  background: rgba(255,255,255,0.8);
+  box-shadow: inset 0 2px 2px rgba(255,255,255,0.6);
+  opacity:0;
+  transform: translateY(20px);
+  transition: transform 0.6s ease, opacity 0.6s ease;
+}
+#cumplido.show{
+  opacity:1;
+  transform: translateY(0);
+  animation: sparkleText 1.5s forwards;
+}
 
-  .subtitle{
-    font-family:'Brush Script MT', cursive;
-    font-size:clamp(1.2rem,3vw,1.8rem);
-    color:#ff4da6;
-    text-shadow: 0 0 6px #ffb3d9, 0 0 12px #fff;
-    margin-bottom:20px;
-  }
+/* Sparkle en el texto */
+@keyframes sparkleText{
+  0%{ text-shadow: 0 0 0px #fff;}
+  50%{ text-shadow:0 0 6px #fff,0 0 12px #ffb3d9,0 0 20px #ff85c1;}
+  100%{ text-shadow:0 0 0px #fff;}
+}
 
-  .btn{
-    background: linear-gradient(90deg, var(--accent1), var(--accent2));
-    color:white;
-    border:none;
-    padding:14px 26px;
-    border-radius:16px;
-    font-size:1.1rem;
-    cursor:pointer;
-    box-shadow: 0 8px 20px rgba(255,77,166,0.3);
-    transition: transform .15s ease, box-shadow .15s ease;
-  }
-  .btn:hover{ transform: scale(1.05); box-shadow: 0 12px 30px rgba(255,77,166,0.5);}
-  .btn:active{ transform: scale(0.98); }
+/* Corazones y partículas */
+.heart, .particle{
+  position:absolute;
+  width:20px; height:20px;
+  transform: rotate(-45deg);
+  pointer-events:none;
+}
+.heart::before, .particle::before{ content:""; position:absolute; width:20px;height:20px;border-radius:50%; background:#ff4da6;}
+.heart::after, .particle::after{ content:""; position:absolute; width:20px;height:20px;border-radius:50%; background:#ff85c1; left:10px;}
 
-  #cumplido{
-    margin-top:26px;
-    min-height:60px;
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    font-size:clamp(1.1rem,2.8vw,1.4rem);
-    color:var(--text);
-    padding:12px 20px;
-    border-radius:14px;
-    background: rgba(255,255,255,0.75);
-    box-shadow: inset 0 1px 0 rgba(255,255,255,0.6);
-    opacity:0;
-    transform: translateY(20px);
-    transition: transform 0.6s ease, opacity 0.6s ease;
-  }
-  #cumplido.show{
-    opacity:1;
-    transform: translateY(0);
-  }
+/* Animaciones flotantes */
+@keyframes floatHeart{
+  0%{ transform: translateY(0px) rotate(-45deg); opacity:1;}
+  100%{ transform: translateY(-80px) rotate(-45deg); opacity:0;}
+}
+@keyframes floatParticle{
+  0%{ transform: translateY(0px) rotate(0deg); opacity:1;}
+  100%{ transform: translateY(-60px) rotate(360deg); opacity:0;}
+}
 
-  .heart, .particle{
-    position:absolute;
-    width:20px; height:20px;
-    transform: rotate(-45deg);
-    pointer-events:none;
-  }
-  .heart::before, .heart::after, .particle::before, .particle::after{
-    content:"";
-    position:absolute;
-    width:20px; height:20px;
-    border-radius:50%;
-  }
-  .heart::before, .particle::before{ background:#ff4da6; }
-  .heart::after, .particle::after{ background:#ff85c1; left:10px; }
+/* Fondo animado de estrellas */
+.star{
+  position:absolute;
+  width:2px; height:2px;
+  background:white;
+  border-radius:50%;
+  opacity:0.8;
+  animation: twinkle 3s infinite alternate;
+}
+@keyframes twinkle{
+  0%{ opacity:0.2; transform: scale(1);}
+  50%{ opacity:1; transform: scale(1.5);}
+  100%{ opacity:0.2; transform: scale(1);}
+}
 
 </style>
 </head>
@@ -127,6 +157,7 @@
 </div>
 
 <script>
+// Frases mágicas
 const cumplidos = [
   "Eres increíble tal como eres 💖",
   "Tu sonrisa hace que todo sea mejor 😄",
@@ -147,88 +178,68 @@ const cumplidos = [
   "Tu personalidad brilla más que cualquier estrella ⭐",
   "Eres divertida y siempre haces sonreír 😌",
   "Tu estilo y tu forma de ser combinan perfecto 👗",
-  "Eres un soplo de aire fresco 💨",
-  "Tu risa podría alegrar cualquier habitación 🎶",
-  "Eres dulce, fuerte y valiente 💖",
-  "Siempre sabes cómo hacer sentir bien a los demás 🌸",
-  "Eres luz en los días grises 💡",
-  "Tu sonrisa podría iluminar ciudades enteras 🌆",
-  "Eres un rayito de sol incluso en días nublados 🌤️",
-  "Tu entusiasmo es contagioso y lindo 🌷",
-  "Eres un arcoíris después de la tormenta 🌈",
-  "Tu presencia hace que todo sea más bonito 🌟",
-  "Eres inspiración sin siquiera intentarlo 💫",
-  "Tu corazón es gigante y lleno de amor 💛",
-  "Eres magia pura ✨",
-  "Tu forma de ser hace que todos se sientan mejor 😄",
-  "Eres un regalo que alegra la vida de otros 🎁",
-  "Tu mirada transmite paz y calma 🕊️",
-  "Eres única, y eso te hace brillante 💖",
-  "Tu risa es música para quien la escucha 🎵",
-  "Eres creatividad en acción 🎨",
-  "Tu alegría hace que los días normales sean especiales 🌸",
-  "Eres dulce como el mejor postre 🍫",
-  "Tu bondad se nota en todo lo que haces 💛",
-  "Eres como un abrazo que calma el alma 🤗",
-  "Tu energía positiva hace todo más bonito ✨",
-  "Eres un sol que nunca deja de brillar 🌞",
-  "Tu ternura derrite corazones 💗",
-  "Eres inspiración para quienes te rodean 🌷",
-  "Tu presencia ilumina cualquier lugar 🌟",
-  "Eres un soplo de felicidad 💨",
-  "Tu sonrisa es contagio de alegría 😍",
-  "Eres luz y alegría al mismo tiempo 🌈",
-  "Tu personalidad es encantadora y genuina 💖",
-  "Eres un motivo para sonreír todos los días 😊"
+  "Eres un soplo de aire fresco 💨"
 ];
 
+// Elementos
 const btn = document.getElementById('btn');
 const out = document.getElementById('cumplido');
 
+// Función para mostrar cumplido
 function mostrarCumplido(){
-  const i = Math.floor(Math.random() * cumplidos.length);
+  const i = Math.floor(Math.random()*cumplidos.length);
   out.textContent = cumplidos[i];
   out.classList.remove('show');
   void out.offsetWidth;
   out.classList.add('show');
 
-  // Crear 5 corazones y partículas por cumplido
-  for(let j=0;j<5;j++){
-    crearCorazon();
-    crearParticula();
-  }
+  // Generar corazones y partículas
+  for(let j=0;j<7;j++){ crearCorazon(); crearParticula(); }
 }
 
+// Crear corazones mágicos
 function crearCorazon(){
   const heart = document.createElement('div');
   heart.className='heart';
   heart.style.left = Math.random()*90+'%';
   heart.style.top = Math.random()*80+'%';
-  heart.style.width = heart.style.height = 15 + Math.random()*15 + 'px';
+  heart.style.width = heart.style.height = 15 + Math.random()*20 + 'px';
   document.body.appendChild(heart);
-  // Animación flotante
   heart.animate([
     {transform:'translateY(0px) rotate(-45deg)', opacity:1},
-    {transform:'translateY(-60px) rotate(-45deg)', opacity:0}
-  ], {duration:2000 + Math.random()*2000, easing:'ease-out'});
+    {transform:'translateY(-100px) rotate(-45deg)', opacity:0}
+  ],{duration:2000 + Math.random()*2000, easing:'ease-out'});
   setTimeout(()=>heart.remove(),4000);
 }
 
+// Crear partículas mágicas
 function crearParticula(){
   const particle = document.createElement('div');
   particle.className='particle';
   particle.style.left = Math.random()*100+'%';
   particle.style.top = Math.random()*100+'%';
-  particle.style.width = particle.style.height = 5 + Math.random()*10+'px';
+  particle.style.width = particle.style.height = 5 + Math.random()*10 + 'px';
   document.body.appendChild(particle);
   particle.animate([
-    {transform:'translateY(0px)', opacity:1},
-    {transform:'translateY(-40px)', opacity:0}
-  ], {duration:1500 + Math.random()*1500, easing:'ease-out'});
+    {transform:'translateY(0px) rotate(0deg)', opacity:1},
+    {transform:'translateY(-60px) rotate(360deg)', opacity:0}
+  ],{duration:1500 + Math.random()*1500, easing:'ease-out'});
   setTimeout(()=>particle.remove(),3000);
 }
 
-btn.addEventListener('click',mostrarCumplido);
+// Botón
+btn.addEventListener('click', mostrarCumplido);
+
+// Fondo estrellado
+for(let i=0;i<100;i++){
+  const star = document.createElement('div');
+  star.className='star';
+  star.style.left=Math.random()*100+'%';
+  star.style.top=Math.random()*100+'%';
+  star.style.width=star.style.height=1+Math.random()*3+'px';
+  star.style.animationDuration=2+Math.random()*3+'s';
+  document.body.appendChild(star);
+}
 
 </script>
 </body>
